--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
             - 8080:8080
         deploy:
             replicas: 4
+            resources:
+                limits:
+                    cpus: '0.50'
+                    memory: 50M
         secrets:
           - admin_un
           - admin_pw
